crates/solidity/testing/snapshots/bindings_output/mappings/nested_named_params/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected EqualGreaterThan.
   ╭─[input.sol:3:25]
   │
 3 │         mapping(bytes32 value => uint256) positions;
   │                         ────────┬───────  
   │                                 ╰───────── Error occurred here.
───╯
Error: Expected EqualGreaterThan.
   ╭─[input.sol:6:21]
   │
 6 │     mapping(address asset0 => mapping(address asset1 => address)) map;
   │                     ──────────────────────┬─────────────────────  
   │                                           ╰─────────────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     struct A {
   │            ┬  
   │            ╰── name: 2
 3 │         mapping(bytes32 value => uint256) positions;
   │                                           ────┬────  
   │                                               ╰────── name: 3
   │ 
 6 │     mapping(address asset0 => mapping(address asset1 => address)) map;
   │                                                                   ─┬─  
   │                                                                    ╰─── name: 4
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ──▶ contract Test {
 2 │ │ ╭───▶     struct A {
 3 │ │ │             mapping(bytes32 value => uint256) positions;
   │ │ │     ──────────────────────────┬──────────────────────────  
   │ │ │                               ╰──────────────────────────── definiens: 3
 4 │ │ ├─│ ▶     }
   │ │ │ │           
   │ │ ╰───────────── definiens: 2
 5 │ │   ╭─▶ 
 6 │ │   ├─▶     mapping(address asset0 => mapping(address asset1 => address)) map;
   │ │   │                                                                            
   │ │   ╰──────────────────────────────────────────────────────────────────────────── definiens: 4
 7 │ ├─────▶ }
   │ │           
   │ ╰─────────── definiens: 1
───╯
